--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <version>5.1.6</version>
         </dependency>
 
+        <!-- Apache common -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+
     </dependencies>
 
 </project>
